--- a/src/scss/vapor/vapor-light.scss
+++ b/src/scss/vapor/vapor-light.scss
@@ -161,24 +161,26 @@ hr {
 }
 
 .blog-tag-list {
-    .tag-list-tag {
-        .tag-link {
-            color: $grey-700;
+    @include media-breakpoint-up(lg) {
+        .tag-list-tag {
+            .tag-link {
+                color: $grey-700;
 
-            .badge {
-                color: $grey-600;
-                background-color: $grey-200;
+                .badge {
+                    color: $grey-600;
+                    background-color: $grey-200;
+                }
             }
         }
-    }
 
-    .tag-list-tag {
-        .tag-link:hover, .tag-link.active {
-            color: $grey-800;
-            background-color: $grey-200;
+        .tag-list-tag {
+            .tag-link:hover, .tag-link.active {
+                color: $grey-800;
+                background-color: $grey-200;
 
-            .badge {
-                background-color: $grey-100;
+                .badge {
+                    background-color: $grey-100;
+                }
             }
         }
     }
