--- a/src/scss/vapor/vapor.scss
+++ b/src/scss/vapor/vapor.scss
@@ -243,3 +243,46 @@ h3 {
         width: 100%;
     }
 }
+
+.vapor-molecule-list {
+    margin-bottom: 8px;
+}
+
+.mobile-drop-down-menu {
+    @include media-breakpoint-down(lg) {
+        align-items: flex-start;
+        padding-right: 16px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        background: $grey-100;
+        border: 1px solid $grey-200;
+        box-shadow: 0px 19px 32px rgba(black, 0.05);
+        backdrop-filter: blur(10px);
+        border-radius: 12px;
+        margin-bottom: 0;
+
+        li a {
+            margin-left: 16px;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 150%;
+            margin-bottom: 24px;
+            text-decoration: none;
+
+            color: $grey-700;
+        }
+
+        li a.active, a:hover, li a:active {
+            color: $blue-300;
+        }
+
+        li:first-child {
+            margin-top: 0;
+        }
+
+        li:last-child {
+            margin-bottom: 0;
+        }
+    }
+}
